// Especifica la versión de la sintaxis de Protocol Buffers.
syntax = "proto3";

// Define el paquete de Go que se generará. Evita colisiones de nombres.
option go_package = "trevor-sys/proto";
package mensaje;

service Mission {
  rpc Distraccion(DistraccionRequest) returns (DistraccionResponse);
  rpc Golpe(GolpeRequest) returns (GolpeResponse);
  rpc ConfirmacionPago(PagoRequest) returns (PagoResponse);
}

message DistraccionRequest {
  int32 turnos = 1;
}

message DistraccionResponse {
  bool confirmacion = 1;
  string razon = 2;
}

message GolpeRequest {
  int32 turnos = 1;
}

message GolpeResponse {
  bool confirmacion = 1;
  int32 botinExtra = 2;
  string razon = 3;
}

message PagoRequest {
  bool victoria = 1;
  string fase = 2;
  string who = 3;
}

message PagoResponse {
  string msj = 1;
}